# aipa_engine

./: .dockerignore  .env.example  .gcloudignore  .gitignore  DEPLOY.md  DEPLOY_VM.md  Dockerfile  README.md  aipa_teardown.sh  docker-compose.yml  pyproject.toml  start_pipeline.ps1  start_rag_survey.ps1  start_server.ps1  start_test_persona.ps1  start_test_survey.ps1  test_kosis.py  test_persona.py  test_survey.py
data/platform_tone/: dcinside_real_posts.jsonl  naver_real_posts.jsonl  youtube_real_comments.jsonl
data/processed/: age_distribution.json  conditional_probs.json  gender_distribution.json  occupation_distribution.json
data/scripts/: SCHEDULE_SETUP.md  archive_data.py  fetch_kosis.py  generate_survey_data.py  generate_training_data.py  pipeline.py  run_pipeline.bat
docs/: aipa_pipeline_full.md  pipeline_v3_proposal.md  validation_results.json  validation_v2_results.json  검증_사회조사_2024.md  교수님_파이프라인_설명.md
rag/: build_index.py  query.py  run_survey.py  survey_results_1.json  test_rag.py
scripts/: collect_dcinside_posts.py  collect_naver_real_posts.py  collect_platform_tone_data.py  collect_youtube_comments.py  compare_models.py  show_collected_data.py  validate_against_kosis.py  validate_v2_content.py
src/aipa_engine/: __init__.py  config.py  db.py  logging_config.py  main.py  middleware.py
src/aipa_engine/api/: __init__.py  chat.py  chats.py  deps.py  evaluations.py  monitoring.py  personas.py  platforms.py  simulations.py  statistics.py  upload.py  users.py
src/aipa_engine/core/: __init__.py
src/aipa_engine/models/: __init__.py  evaluation.py  persona.py  simulation.py  survey.py
src/aipa_engine/services/: __init__.py  calibrator.py  db_service.py  eval_service.py  firestore_service.py  kosis_client.py  llm_service.py  naver_client.py  population_generator.py  response_generator.py  simulation_service.py
src/aipa_engine/utils/: __init__.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_calibrator.py  test_config.py  test_llm_service.py  test_population_generator.py  test_response_generator.py  test_simulation_service.py
training/: build_real_dataset.py  combine_platform_data.py  combine_reasoning_data.py  convert_gguf.py  convert_gguf_simple.py  convert_survey_to_embedding.py  convert_to_reasoning.py  finetune_colab.ipynb  merge_and_export.py  test_inference.py  train_embedding.py  train_local.py  train_reasoning.py  train_reasoning_v2.py
