[project]
name = "aipa-engine"
version = "0.1.0"
description = "AI Panel Analytics - Statistical Persona Survey Simulation Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.18.0",
    "python-multipart>=0.0.6",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "firebase-admin>=6.4.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
